header and main

--- a/index.html
+++ b/index.html
@@ -1,20 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <header>
 
+<body>
+    <header id="header">
+        <div class="header_banner">
+            <img src="img/coffeebeans-1500x500.png" alt="Coffee beans falling from top to bottom">
+        </div>
+        <nav class="header_nav">
+            <div class="header_logo">
+                <a href="#home"><img width="70" src="img/toppng.com-coffee-logo-656x1110.png"
+                        alt="Cap of coffe and the company name - It's coffee time"></a>
+            </div>
+            <div class="header_menu">
+                <a href="#general" class="header_menu_item">General</a>
+                <a href="#products" class="header_menu_item">Products</a>
+                <a href="#Contacts" class="header_menu_item">Contacts</a>
+            </div>
+        </nav>
+        
     </header>
     <main>
-
+        <div class="section_subscription">
+            <h1 class="section_subscription_title">Coffee that inspires</h1>
+            <p class="section_subscription_slogan">Good coffee can solve all problems... Take your time and have a cup
+                of coffee</p>
+            <form action="submit">
+                <input class="submit_form" type="text" placeholder="Enter your email" required><br>
+                <button class="submit_button">Subscribe</button>
+            </form>
+        </div>
+        <div class="block_general">
+            <div class="block_general manufacture">
+                <img class="manufacture_image" width="120" src="img/coffee-whole-bean-bag.png" alt="The bag full with coffee">
+                <h2 class="manufacture_title">Verified manufacturers</h2>
+                <p class="manufacture_description">We only work with the best coffee producers in Colombia, Peru and India. Here you will find the best aroma and exquisite taste of coffee.</p>
+            </div>
+        </div>
     </main>
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
