--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
     <header id="header">
-        <div class="header__banner">
-            <img src="img/coffeebeans-1500x500.png" alt="Coffee beans falling from top to bottom">
+        <div>
+            <img  class="header__banner" src="img/coffeebeans-1500x500.png" alt="Coffee beans falling from top to bottom">
         </div>
         <nav class="header__nav">
             <div class="header__logo">
@@ -58,7 +59,7 @@
                 <p class="packaging__description">You can order the craft packages for your bisness.</p>
             </div>
         </div>
-        <div class="products">
+        <div class="products" id="products">
             <div class="products__big">
                 <img class="products__big__background" width="200" src="img/background-coffee-beans-3168x1416.png"
                     alt="Spilled coffee beans.">
