new styles, mobile first

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body>
     <header id="header">
-        <div>
+        <!--<div>
             <img  class="header__banner" src="img/coffeebeans-1500x500.png" alt="Coffee beans falling from top to bottom">
-        </div>
-        <nav class="header__nav">
+        </div>-->
+        <nav class="header__nav container">
             <div class="header__logo">
                 <a href="#home"><img width="70" src="img/toppng.com-coffee-logo-656x1110.png"
                         alt="Cap of coffe and the company name - It's coffee time"></a>
